package com.morris.pattern.observer.impl;

public interface Observer {
    void update();
}
