@startuml

title 观察者模式类图

abstract Subject {
    + void attach(Observer observer)
    + void detach(Observer observer)
    + notify()
}

class ConcreteSubject

Subject <|.. ConcreteSubject

abstract Observer {
    + void update()
}

class ConcreteObserver {
}

Observer <|.. ConcreteObserver

Subject o--> Observer

class Client

Subject <.. Client
Observer <.. Client

git
@enduml